--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     </div>
     <div class="Top">
-        <br>
+
+        <img class="logo" src="icones/LOGO_05-remove.png" width="80" height="80">
+
         <button class ="TopButtons"><img src="icones/bx-shopping-bag.svg" alt=""> Shop</button>
 
         <div class="container">
@@ -52,7 +54,7 @@
 
     <section class="MainPage">
         <div class="image">
-            <img class="picture" src="https://assets.bonappetit.com/photos/6282c9214844aec731451f28/16:9/w_2580,c_limit/0622-Summer-Goddess-Chicken-Salad.jpg">
+            <img class="picture" src="https://th.bing.com/th/id/OIP.zeAIaD8L2jAKFL91ig488wHaHa?rs=1&pid=ImgDetMain" width="300" height="200">
         </div>
         <div class="arrowRight">
             <button class="arrow" onclick="document.location"><img class="svg" src="icones/arrow-right.svg"></button>
