Updated About us

--- a/FitnessAndHealthWebseite/aboutUs.html
+++ b/FitnessAndHealthWebseite/aboutUs.html
@@ -5,7 +5,7 @@
     <link rel ="stylesheet" type="text/css" href="stylesheet.css">
     <title>Über uns</title>
 </head>
-<body>
+<body style="background-color: black">
 
 
         <div class =".homeButton-wrapper" style="background-color: black">
@@ -16,23 +16,47 @@
 
     <section>
         <h2 class ="headersInAboutUs">Wer sind wir</h2>
-        <table>
+        <table class = "borderStyle" align="center">
             <tbody>
-                <tr>
-                    <td class ="borderStyle"><img src="icones/WebseiteMonkeyPicture.jpg"></td>
-                    <td style = "padding-left: 10px">Text von Jan</td>
+                <tr class = "borderStyle">
+                    <td><img src="icones/JanBild.png" alt = "Jan" height="250px"></td>
+                    <td>
+                        <pre class = "textInAboutUs">
+                            Ich bin Jan Brunner, 15 Jahre alt und lebe in Österreich.
+                            Ich besuche die HTL Leonding und programmiere sehr gerne in meiner Freizeit.
+                            Andererseits bin ich auch sehr gerne mit Freunden unterwegs und spiele Tischtennis.
+                        </pre>
+                    </td>
+                </tr>
+                <tr class = "borderStyle" >
+                    <td><img src = "icones/LorenzBild.JPG" alt = "Lorenz" height="250px"></td>
+                    <td>
+                        <pre class = "textInAboutUs">
+                            Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.
+                            In meiner Freízeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbesseren in allen Fasseten.
+                            Ich liebe es zu Programmieren und besuche gerne die HTL Leonding
+                        </pre>
+                    </td>
+                </tr>
+                <tr class = "borderStyle">
+                    <td><img src = "icones/ErnadPhoto.jpg" alt = "Ernad" height="250px"></td>
+                    <td>
+                        <pre class="textInAboutUs">
+                            Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website.
+                            Ich bin 16 und ursprünglich in Bosnien geboren.
+                            Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
+                        </pre>
+                    </td>
                 </tr>
                 <tr>
-                    <td>Lorenz</td>
-                    <td>Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding. In meiner Freízeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbesseren in allen Fasseten. Ich liebe es zu Programmieren und besuche gerne die HTL Leonding</td>
-                </tr>
-                <tr>
-                    <td>Ernhard</td>
-                    <td>Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website. Ich bin 16 und ursprünglich in Bosnien geboren. Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.</td>
-                </tr>
-                <tr>
-                    <td>Mario</td>
-                    <td>Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite. Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik. Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.</td>
+                    <td><img src = "icones/MarioBild.jpg" alt = "Mario" height="250px"></td>
+                    <td>
+                        <pre class = "textInAboutUs">
+                            Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite.
+                            Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik.
+                            Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
+                        </pre>
+                    </td>
                 </tr>
             </tbody>
         </table>
