Updated picture and About us

--- a/FitnessAndHealthWebseite/aboutUs.html
+++ b/FitnessAndHealthWebseite/aboutUs.html
@@ -19,7 +19,8 @@
         <table class = "borderStyle" align="center">
             <tbody>
                 <tr class = "borderStyle">
-                    <td><img src="icones/JanBild.png" alt = "Jan" height="250px"></td>
+
+                    <td><img src="icones/JanBild.png" alt = "Jan" width="200px"></td>
                     <td>
                         <pre class = "textInAboutUs">
                             Ich bin Jan Brunner, 15 Jahre alt und lebe in Österreich.
@@ -29,7 +30,7 @@
                     </td>
                 </tr>
                 <tr class = "borderStyle" >
-                    <td><img src = "icones/LorenzBild.JPG" alt = "Lorenz" height="250px"></td>
+                    <td><img src = "icones/LorenzBild.JPG" alt = "Lorenz" width="200px"></td>
                     <td>
                         <pre class = "textInAboutUs">
                             Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.
@@ -39,7 +40,7 @@
                     </td>
                 </tr>
                 <tr class = "borderStyle">
-                    <td><img src = "icones/ErnadPhoto.jpg" alt = "Ernad" height="250px"></td>
+                    <td><img src = "icones/ErnadPhoto.jpg" alt = "Ernad" width="200px"></td>
                     <td>
                         <pre class="textInAboutUs">
                             Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website.
@@ -49,7 +50,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><img src = "icones/MarioBild.jpg" alt = "Mario" height="250px"></td>
+                    <td><img src = "icones/MarioBild.jpg" alt = "Mario" width="200px"></td>
                     <td>
                         <pre class = "textInAboutUs">
                             Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite.
