--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -29,7 +29,7 @@
             <hr class="vertikalLine">
         </div>
 
-        <button class="TopButtons" title="Gehe zu unseren Trainingsplänen" onclick="document.location ='workoutplans-html'"><img src="icones/bx-run.svg" alt="">Trainingspläne</button>
+        <button class="TopButtons" title="Gehe zu unseren Trainingsplänen" onclick="document.location ='trainings-plans.html'"><img src="icones/bx-run.svg" alt="">Trainingspläne</button>
 
         <div class="container">
             <hr class="vertikalLine">
