--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -22,7 +22,7 @@
             <hr class="vertikalLine">
         </div>
 
-        <button class="TopButtons" onclick="document.location = 'eatingHabitsChoose.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="">Ernährungspläne</button>
+        <button class="TopButtons" onclick="document.location = 'eating-habits-choose.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="">Ernährungspläne</button>
 
 
         <div class="container">
@@ -34,7 +34,7 @@
         <div class="container">
             <hr class="vertikalLine">
         </div>
-        <button class="TopButtons" onclick="document.location = 'aboutUs.html'" title="Über uns"><img src="icones/bxs-group.svg" alt="">Über uns</button>
+        <button class="TopButtons" onclick="document.location = 'about-us.html'" title="Über uns"><img src="icones/bxs-group.svg" alt="">Über uns</button>
 
         <br>
         <br>
