changed-about-us

--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -16,51 +16,16 @@
 
     <section>
         <h2 class ="headersInAboutUs">Wer sind wir</h2>
-        <table class = "borderStyle" align="center">
-            <tbody>
-                <tr class = "borderStyle">
-
-                    <td><img src="icones/JanBild.png" alt = "Jan" width="200px"></td>
-                    <td>
-                        <pre class = "textInAboutUs">
-                            Ich bin Jan Brunner, 15 Jahre alt und lebe in Österreich.
-                            Ich besuche die HTL Leonding und programmiere sehr gerne in meiner Freizeit.
-                            Andererseits bin ich auch sehr gerne mit Freunden unterwegs und spiele Tischtennis.
-                        </pre>
-                    </td>
-                </tr>
-                <tr class = "borderStyle" >
-                    <td><img src = "icones/LorenzBild.JPG" alt = "Lorenz" width="200px"></td>
-                    <td>
-                        <pre class = "textInAboutUs">
-                            Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.
-                            In meiner Freízeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbesseren in allen Fasseten.
-                            Ich liebe es zu Programmieren und besuche gerne die HTL Leonding
-                        </pre>
-                    </td>
-                </tr>
-                <tr class = "borderStyle">
-                    <td><img src = "icones/ErnadPhoto.jpg" alt = "Ernad" width="200px"></td>
-                    <td>
-                        <pre class="textInAboutUs">
-                            Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website.
-                            Ich bin 16 und ursprünglich in Bosnien geboren.
-                            Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
-                        </pre>
-                    </td>
-                </tr>
-                <tr>
-                    <td><img src = "icones/MarioBild.jpg" alt = "Mario" width="200px"></td>
-                    <td>
-                        <pre class = "textInAboutUs">
-                            Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite.
-                            Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik.
-                            Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
-                        </pre>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
     </section>
+
+    <div class = "styleForDivInAboutUs">
+        <button class = "styleForButtonInAboutUs">
+            <img src="icones/JanBild.png" alt = "Jan pricture" class = "styleForImageInAboutUs">
+            <pre>
+                Jan Brunner
+                Projektleiter
+            </pre>
+        </button>
+    </div>
 </body>
 </html>
