Einfliegen der Überschrift

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -49,9 +49,12 @@
     </section>
 
     <section class="MainPage">
-        <h1 class="quote">Deine Fitnessreise beginnt</h1>
-        <h2 class="quote2">Werde ein Tier</h2>
+        <div id="headlinetrans">
+            <h1 class="headLine">Deine Fitnessreise beginnt</h1>
+        </div>
 
+
+        <h2 class="quote2">Werde ein Tier</h2>
     </section>
 </body>
 </html>
