First quote fly in

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -54,7 +54,7 @@
         </div>
 
 
-        <h2 class="quote2">Werde ein Tier</h2>
+        <h2 class="quote2"><i>Sei stärker als deine stärkste Ausrede</i></h2>
     </section>
 </body>
 </html>
