--- a/fitness-and-health-website/eating-habits-choose.html
+++ b/fitness-and-health-website/eating-habits-choose.html
@@ -13,5 +13,11 @@
 
         </div>
     </div>
+
+    <div id = "titleNutrition">
+        <p id ="titleNutritionText"> Ernährung</p>
+    </div>
+
+
 </body>
 </html>
