--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Trainingsplan</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-<div style ="background-color: black">
-    <button onclick="document.location='index.html'" class ="homeButton"><img src="icones/iconizer-bxs-home.svg" alt="" width="30px" height="30px"></button>
-
+<div class =".homeButton-wrapper" style="background-color: black">
+    <button onclick="document.location='index.html'" class ="homeButton"></button>
 </div>
 </body>
 </html>
