Updated About Us

--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel ="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel = "stylesheetAboutUs" type = "text/css" href = "stylesheetAboutUs.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Über uns</title>
 </head>
@@ -48,7 +49,81 @@ Projektleiter
             </td>
         </tr>
         <tr>
+            <td class = "styleForTdInAboutUsLeftPicture" style = "width: 15%">
 
+                <button class = "styleForButtonInAboutUsLeft">
+                    <img src="icones/LorenzBild.jpg" alt = "Lorenz picture" class = "styleForImageInAboutUs">
+                    <pre class = "styleForPreInAboutUs">
+Lorenz Parzer
+Stellvertretender
+Projektleiter
+                    </pre>
+                </button>
+
+            </td>
+            <td class = "styleForTdInAboutUsRightText">
+
+                    <pre class = "styleForPreInAboutUs">
+                        Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.
+                        In meiner Freízeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbesseren in allen Fasseten.
+                        Ich liebe es zu Programmieren und besuche gerne die HTL Leonding
+                    </pre>
+            </td>
+        </tr>
+        <tr>
+            <td>
+
+            <br>
+            <br>
+            </td>
+        </tr>
+        <tr>
+            <td class = "styleForTdInAboutUsLeftPicture" style = "width: 15%">
+
+                <button class = "styleForButtonInAboutUsLeft">
+                    <img src="icones/ErnadPhoto.jpg" alt = "Lorenz picture" class = "styleForImageInAboutUs">
+                    <pre class = "styleForPreInAboutUs">
+Ernad Music
+Mitarbeiter
+                    </pre>
+                </button>
+
+            </td>
+            <td class = "styleForTdInAboutUsRightText">
+
+                    <pre class = "styleForPreInAboutUs">
+                        Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website.
+                        Ich bin 16 und ursprünglich in Bosnien geboren.
+                        Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
+                    </pre>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br>
+                <br>
+            </td>
+        </tr>
+        <tr>
+            <td class = "styleForTdInAboutUsLeftPicture" style = "width: 15%">
+
+                <button class = "styleForButtonInAboutUsLeft">
+                    <img src="icones/MarioBild.jpg" alt = "Lorenz picture" class = "styleForImageInAboutUs">
+                    <pre class = "styleForPreInAboutUs">
+Mario Solomun
+Mitarbeiter
+                    </pre>
+                </button>
+
+            </td>
+            <td class = "styleForTdInAboutUsRightText">
+
+                    <pre class = "styleForPreInAboutUs">
+                        Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite.
+                        Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik.
+                        Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
+                    </pre>
+            </td>
         </tr>
     </table>
 
