Second quote flies in

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -53,8 +53,11 @@
             <h1 class="headLine">Deine Fitnessreise beginnt</h1>
         </div>
 
+        <div class="quotes">
+            <h2 class="quote2"><i>Sei stärker als deine stärkste Ausrede</i></h2>
+            <h2 class="quote3"><i>Love the Pain</i></h2>
+        </div>
 
-        <h2 class="quote2"><i>Sei stärker als deine stärkste Ausrede</i></h2>
     </section>
 </body>
 </html>
