made a stylesheet for each html file

--- a/fitness-and-health-website/eating-habits-choose.html
+++ b/fitness-and-health-website/eating-habits-choose.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheetNutrition.css">
   <title>Ernährungsarten</title>
 </head>
 <body>
