--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel ="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel = "stylesheetAboutUs" type = "text/css" href = "stylesheetAboutUs.css">
+    <link rel = "stylesheet" type = "text/css" href = "stylesheetAboutUs.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Über uns</title>
 </head>
