--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -54,8 +54,8 @@
         </div>
 
         <div class="quotes">
-            <h2 class="quote2"><i>Sei stärker als deine stärkste Ausrede</i></h2>
-            <h2 class="quote3"><i>Love the Pain</i></h2>
+            <h2 class="quote2"><i>"Sei stärker als deine stärkste Ausrede"</i></h2>
+            <h2 class="quote3"><i>"Love the Pain"</i></h2>
         </div>
 
     </section>
