--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -2,130 +2,121 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <link rel ="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel = "stylesheet" type = "text/css" href = "stylesheetAboutUs.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="stylesheetAboutUs.css">
     <title>Über uns</title>
 </head>
-<body style="background-color: black; overflow: auto">
+<body style="background-color: black; overflow: auto; margin: 0; padding: 0;">
 
 
-        <div class =".homeButton-wrapper" style="background-color: black">
-                <button onclick="document.location='index.html'" class ="homeButton"></button>
-        </div>
+<div class="homeButton-wrapper" style="background-color: black;">
+    <button onclick="document.location='index.html'" class="homeButton"></button>
+</div>
 
 
+<h2 class="headersInAboutUs">Wer sind wir</h2>
 
 
-        <h2 class ="headersInAboutUs">Wer sind wir</h2>
-
-    <table id = "tableInAboutUs">
-        <tr style = "width: 100%; overflow: auto">
-            <td class = "styleForTdInAboutUsLeftPicture" style = "width: 15%">
-
-                <button class = "styleForButtonInAboutUsLeft">
-                    <img src="icones/JanBild.png" alt = "Jan picture" class = "styleForImageInAboutUs">
-                    <pre class = "styleForPreInAboutUs">
-Jan Brunner
-Projektleiter
-                    </pre>
-                </button>
-
-            </td>
-            <td class = "styleForTdInAboutUsRightText">
-
-                    <pre class = "styleForPreInAboutUs">
-                        Mein Name ist Jan Brunner und ich bin der Projektleiter dieses Projektes.
-                        Derzeit besuche ich den zweiten Jahrgang der HTL Leonding im Zweig Informatik.
-                        Meine Hobbys sind Tischtennis, Kraftsport und Programmieren.
-                    </pre>
-            </td>
-
-        </tr>
+    <table class = "tableStyleInAboutUs">
         <tr>
+            <td class = "heightAndWidthForTdInAboutUs">
+                    <button class = "styleForButtonInAboutUsLeft">
+                        <img src = "icones/JanBild.png" alt = "Jan picture" class = "styleForImgInAboutUs">
+                        <p class="styleForPInAboutUs">Jan Brunner<br>Projektleiter</p>
+
+                    </button>
+            </td>
             <td>
-                <br>
-                <br>
-            </td>
-        </tr>
-        <tr>
-            <td class = "styleForTdInAboutUsLeftPicture" style = "width: 15%">
-
-                <button class = "styleForButtonInAboutUsLeft">
-                    <img src="icones/LorenzBild.jpg" alt = "Lorenz picture" class = "styleForImageInAboutUs">
-                    <pre class = "styleForPreInAboutUs">
-Lorenz Parzer
-Stellvertretender
-Projektleiter
-                    </pre>
-                </button>
-
-            </td>
-            <td class = "styleForTdInAboutUsRightText">
-
-                    <pre class = "styleForPreInAboutUs">
-                        Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.
-                        In meiner Freízeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbesseren in allen Fasseten.
-                        Ich liebe es zu Programmieren und besuche gerne die HTL Leonding
-                    </pre>
-            </td>
-        </tr>
-        <tr>
-            <td>
-
-            <br>
-            <br>
-            </td>
-        </tr>
-        <tr>
-            <td class = "styleForTdInAboutUsLeftPicture" style = "width: 15%">
-
-                <button class = "styleForButtonInAboutUsLeft">
-                    <img src="icones/ErnadPhoto.jpg" alt = "Lorenz picture" class = "styleForImageInAboutUs">
-                    <pre class = "styleForPreInAboutUs">
-Ernad Music
-Mitarbeiter
-                    </pre>
-                </button>
-
-            </td>
-            <td class = "styleForTdInAboutUsRightText">
-
-                    <pre class = "styleForPreInAboutUs">
-                        Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website.
-                        Ich bin 16 und ursprünglich in Bosnien geboren.
-                        Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
-                    </pre>
+                <p class = "styleForPInAboutUsWritingTextLeft">
+                    Ich bin Jan Brunner, 15 Jahre alt und leite dieses Projekt zusammen mit meinen Schulkollegen. <br>
+                    In meiner Freizeit beschäftige ich mich mit Webprogrammierung, sowie auch C# und C Programmierung.
+                </p>
             </td>
         </tr>
         <tr>
             <td>
                 <br>
                 <br>
-            </td>
-        </tr>
-        <tr>
-            <td class = "styleForTdInAboutUsLeftPicture" style = "width: 15%">
-
-                <button class = "styleForButtonInAboutUsLeft">
-                    <img src="icones/MarioBild.jpg" alt = "Lorenz picture" class = "styleForImageInAboutUs">
-                    <pre class = "styleForPreInAboutUs">
-Mario Solomun
-Mitarbeiter
-                    </pre>
-                </button>
-
-            </td>
-            <td class = "styleForTdInAboutUsRightText">
-
-                    <pre class = "styleForPreInAboutUs">
-                        Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite.
-                        Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik.
-                        Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
-                    </pre>
             </td>
         </tr>
     </table>
 
+    <table class = "tableStyleInAboutUs">
+        <tr>
+            <td>
+                <p class = "styleForPInAboutUsWritingTextRight">
+                    Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.<br>
+                    In meiner Freízeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbesseren in allen Fasseten. <br>
+                    Ich liebe es zu Programmieren und besuche gerne die HTL Leonding
+                </p>
+            </td>
+
+            <td class = "heightAndWidthForTdInAboutUs">
+                <button class = "styleForButtonInAboutUsRight">
+                    <img src = "icones/LorenzBild.JPG" alt = "Lorenz picture" class = "styleForImgInAboutUs">
+                    <p class="styleForPInAboutUs">Lorenz Parzer<br>Stellvertretender<br>Projektleiter</p>
+
+                </button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br>
+                <br>
+            </td>
+        </tr>
+    </table>
+
+    <table class = "tableStyleInAboutUs">
+        <tr>
+            <td class = "heightAndWidthForTdInAboutUs">
+                <button class = "styleForButtonInAboutUsLeft">
+                    <img src = "icones/ErnadPhoto.jpg" alt = "Ernad picture" class = "styleForImgInAboutUs">
+                    <p class="styleForPInAboutUs">Ernard Music<br>Mitarbeiter</p>
+
+                </button>
+            </td>
+            <td>
+                <p class = "styleForPInAboutUsWritingTextLeft">
+                    Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website. <br>
+                    Ich bin 16 und ursprünglich in Bosnien geboren. <br>
+                    Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br>
+                <br>
+            </td>
+        </tr>
+    </table>
+
+    <table class = "tableStyleInAboutUs">
+        <tr>
+            <td>
+                <p class = "styleForPInAboutUsWritingTextRight">
+                    Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite. <br>
+                    Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik. <br>
+                    Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
+                </p>
+            </td>
+
+            <td class = "heightAndWidthForTdInAboutUs">
+                <button class = "styleForButtonInAboutUsRight">
+                    <img src = "icones/MarioBild.jpg" alt = "Mario picture" class = "styleForImgInAboutUs">
+                    <p class="styleForPInAboutUs">Mario Solomun<br>Mitarbeiter</p>
+
+                </button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br>
+                <br>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
