4 quotes are flying in and out in the opposite direction.

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -54,8 +54,22 @@
         </div>
 
         <div class="quotes">
-            <h2 class="quote2"><i>"Sei stärker als deine stärkste Ausrede"</i></h2>
-            <h2 class="quote3"><i>"Love the Pain"</i></h2>
+            <h2 class="quote2">Mindfulness is the key to a healthy mind</h2>
+            <h2 class="quote3">"Love the Pain"</h2>
+            <h2 class="quote4">Discipline equals freedom</h2>
+            <h2 class="quote5">Fitness is the essence of life</h2>
+            <!--<h2 class="quote2">Muscle gain is the best medicine</h2>
+            <h2 class="quote3">Healthy eating is the key to a healthy mind</h2>
+            <h2 class="quote4">Mindfulness and self-care are essential for a healthy body</h2>
+            <h2 class="quote5">Stay strong, stay motivated, and stay consistent</h2>
+            <h2 class="quote2">The journey to fitness is not a destination, but a journey</h2>
+            <h2 class="quote3">Be yourself, be confident, and be strong</h2>
+            <h2 class="quote4">Remember, the greatest glory in living lies not in never falling, but in rising every time we fall</h2>
+            <h2 class="quote5">The future belongs to those who believe in the beauty of their dreams</h2>
+            <h2 class="quote2">Stay positive, stay focused, and stay energized</h2>
+            <h2 class="quote3">The world is a stage, and all the actors must play their part</h2>
+            <h2 class="quote4">The key to success is not to stop questioning, but to stop chasing the wrong answers</h2>
+            <h2 class="quote5">Believe in yourself, and you'll achieve great things</h2>-->
         </div>
 
     </section>
