small changes (traingsplan)

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -10,5 +10,8 @@
 <div class =".homeButton-wrapper" style="background-color: black">
     <button onclick="document.location='index.html'" class ="homeButton"></button>
 </div>
+<div class = ".title">
+    <p id ="title">TRAININGSPLÄNE</p>
+</div>
 </body>
 </html>
