--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -11,7 +11,7 @@
     <button onclick="document.location='index.html'" class ="homeButton"></button>
 </div>
 <div class = ".title">
-    <p id ="title">TRAININGSPLÄNE</p>
+    <p id ="title">Trainingspläne</p>
 </div>
 </body>
 </html>
