add some shop details

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -5,7 +5,14 @@
     <title>Shop</title>
     <link rel="stylesheet" type="text/css" href="stylesheetShop.css">
 </head>
-<body>
+<body style = "background-color: black">
+        <div class="homeButton-wrapper" style="background-color: black;">
+            <button onclick="document.location='index.html'" class="homeButton"></button>
+        </div>
+
+        <h1 class = "styleForHeader">Shop</h1>
+
+
 
 </body>
 </html>
