fixed one littel bug

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -55,7 +55,7 @@
 
         <div class="quotes">
             <h2 class="quote2">Mindfulness is the key to a healthy mind</h2>
-            <h2 class="quote2>"Love the Pain"</h2>
+            <h2 class="quote2">Love the Pain</h2>
             <h2 class="quote2">Discipline equals freedom</h2>
             <h2 class="quote2">Fitness is the essence of life</h2>
             <h2 class="quote3">Muscle gain is the best medicine</h2>
