--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -53,7 +53,7 @@
             <h1 class="headLine">Deine Fitnessreise beginnt</h1>
         </div>
 
-        <div class="quotes">
+        <!--<div class="quotes">
             <h2 class="quote2">Mindfulness is the key to a healthy mind</h2>
             <h2 class="quote2">Love the Pain</h2>
             <h2 class="quote2">Discipline equals freedom</h2>
@@ -71,7 +71,31 @@
             <h2 class="quote5">The key to success is not to stop questioning, but to stop chasing the wrong answers</h2>
             <h2 class="quote5">Believe in yourself, and you'll achieve great things</h2>
         </div>
+        <div class="quote2">
+            <h2>Mindfulness is the key to a healthy mind</h2>
+            <h2>Love the Pain</h2>
+            <h2>Discipline equals freedom</h2>
+            <h2>Fitness is the essence of life</h2>
+        </div>-->
+        <div class="quote3">
+            <h2>Muscle gain is the best medicine</h2>
+            <h2>Healthy eating is the key to a healthy mind</h2>
+            <h2>Mindfulness and self-care are essential for a healthy body</h2>
+            <h2>Stay strong, stay motivated, and stay consistent</h2>
+        </div>
+        <div class="quote4">
+            <h2>The journey to fitness is not a destination, but a journey</h2>
+            <h2>Be yourself, be confident, and be strong</h2>
+            <h2>Remember, the greatest glory in living lies not in never falling</h2>
+            <h2>The future belongs to those who believe in the beauty of their dreams</h2>
+        </div>
+        <div class="quote5">
+            <h2>Stay positive, stay focused, and stay energized</h2>
+            <h2>The world is a stage, and all the actors must play their part</h2>
+            <h2>The key to success is not to stop questioning, but to stop chasing the wrong answers</h2>
+            <h2>Believe in yourself, and you'll achieve great things</h2>
+        </div>
 
-    </section>
+   </section>
 </body>
 </html>
