A background picture for the mainpage to make it more prittier, it is just an option we can always change it

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -41,14 +41,14 @@
 
     </div>
 
-    <div class = "Top">
+    <div class="Top">
     <br>
     <br>
 
     </div>
     </section>
 
-    <section class="MainPage">
+    <div class="MainPage">
         <div id="headlinetrans">
             <h1 class="headLine">Deine Fitnessreise beginnt</h1>
         </div>
@@ -76,6 +76,6 @@
         </div>
 
 
-   </section>
+   </div>
 </body>
 </html>
