--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -5,7 +5,7 @@
     <link href ="stylesheet.css" type="text/css" rel ="stylesheet">
     <title>FitnessAndHealth</title>
 </head>
-<body>
+<body class="index">
     <section>
     <div class = "Top">
         <br>
