Put the pdfs in a folder and changed the css names

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Shop</title>
-    <link rel="stylesheet" type="text/css" href="stylesheetShop.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet-shop.css">
 </head>
 <body style = "background-color: black">
         <div class="homeButton-wrapper" style="background-color: black;">
