--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="stylesheetAboutUs.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet-about-us.css">
     <title>Über uns</title>
 </head>
 <body style="background-color: black; overflow: auto; margin: 0; padding: 0;">
