--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Trainingsplan</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="stylesheetTrainingPlans.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
 </head>
 <body>
 <div class =".homeButton-wrapper" style="background-color: black">
