boxen on the shop page for the products pictures

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -11,8 +11,20 @@
         </div>
 
         <h1 class = "styleForHeader">Shop</h1>
+        <div class="search">
 
+        </div>
+        <div class="shop-items">
+            <div class="item1">
+                <p>Das ist eine box mit rand</p>
+            </div>
+            <div class="item2">
 
+            </div>
+            <div class="item3">
+
+            </div>
+        </div>
 
 </body>
 </html>
