Added Picture to the Mainpage

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -74,8 +74,15 @@
             <h2 class="quote4 set4">The key to success is not to stop questioning, but to stop chasing the wrong answers</h2>
             <h2 class="quote5 set4">Believe in yourself, and you'll achieve great things</h2>
         </div>
+        <div class="below">
 
+            <div class="pictureContainer">
 
+                <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
+                <h2 class="h2onSite">Was bezweckt diese Webseite?</h2>
+            </div>
+
+        </div>
    </div>
 </body>
 </html>
