Finished the nutririon page (1 of 3) and changed minor things

--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -73,7 +73,7 @@
             <td class = "heightAndWidthForTdInAboutUs">
                 <button class = "styleForButtonInAboutUsLeft">
                     <img src = "icones/ErnadPhoto.jpg" alt = "Ernad picture" class = "styleForImgInAboutUs">
-                    <p class="styleForPInAboutUs">Ernard Music<br>Mitarbeiter</p>
+                    <p class="styleForPInAboutUs">Ernad Music<br>Mitarbeiter</p>
 
                 </button>
             </td>
