--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -22,7 +22,7 @@
             <hr class="vertikalLine">
         </div>
 
-        <button class="TopButtons" onclick="document.location = 'eating-habits-choose.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="">Ernährungspläne</button>
+        <button class="TopButtons" onclick="document.location = 'nutrition.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="">Ernährungspläne</button>
 
 
         <div class="container">
