made a good border for the picture and now I will write the text

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -79,7 +79,13 @@
             <div class="pictureContainer">
 
                 <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
-                <h2 class="h2onSite">Was bezweckt diese Webseite?</h2>
+                <div class="textContent">
+                    <div class="h2Box">
+                        <h2 class="h2onSite">Was dich auf unserer Webseite erwartet</h2>
+                    </div>
+
+                    <p class="textForWebsite">Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.</p>
+                </div>
             </div>
 
         </div>
