Created a bottom for mainpage

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -96,5 +96,64 @@
 
         </div>
    </div>
+
+
+
+   <table id = "tableInMain">
+       <tr>
+           <td class = "tdInMain"><p id = "@InTableInMain" style="padding-left: 10%">@ Fitness and Health 2024</p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Über uns</td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Rechtliches</p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Folge uns</td>
+       </tr>
+       <tr>
+           <td></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain">Kontakte:</p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain">Impressum</p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain">Instagram</p></td>
+       </tr>
+       <tr>
+           <td></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Jan</a></p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain">Datenschutz</p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain">TikTok</p></td>
+       </tr>
+
+       <tr>
+           <td></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Lorenz</a></p></td>
+           <td></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain">Youtube</p></td>
+       </tr>
+
+
+       <tr>
+           <td></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Ernard</a></p></td>
+           <td></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain">Facebook</p></td>
+       </tr>
+
+       <tr>
+           <td></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Mario</a></p></td>
+           <td></td>
+           <td></td>
+       </tr>
+
+       <tr>
+           <td><br></td>
+       </tr>
+
+       <tr>
+           <td><br></td>
+       </tr>
+
+       <tr>
+           <td><br></td>
+       </tr>
+   </table>
+
+
 </body>
 </html>
