added shop search

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -10,9 +10,13 @@
             <button onclick="document.location='index.html'" class="homeButton"></button>
         </div>
 
-        <h1 class = "styleForHeader">Shop</h1>
-        <div class="search">
 
+        <div class="top">
+            <h1 class = "styleForHeader">Shop</h1>
+            <div class="search">
+                <input type="text" id="searchInput" placeholder="Search...">
+                <button id="searchButton">Search</button>
+            </div>
         </div>
         <div class="shop-items">
             <div class="item1">
