--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -104,7 +104,7 @@
            <td class = "tdInMain"><p id = "@InTableInMain" style="padding-left: 10%">@ Fitness and Health 2024</p></td>
            <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Über uns</td>
            <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Rechtliches</p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Folge uns</td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Folge uns auf</td>
        </tr>
        <tr>
            <td></td>
@@ -121,7 +121,7 @@
 
        <tr>
            <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Lorenz</a></p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:l.parzer@students.htl-leonding.ac.at" class = "styleForEmailInMain">Lorenz</a></p></td>
            <td></td>
            <td class = "tdInMain"><p class = "normalTextInTableInMain">Youtube</p></td>
        </tr>
@@ -129,14 +129,14 @@
 
        <tr>
            <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Ernard</a></p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:e.music1@students.htl-leonding.ac.at" class = "styleForEmailInMain">Ernad</a></p></td>
            <td></td>
            <td class = "tdInMain"><p class = "normalTextInTableInMain">Facebook</p></td>
        </tr>
 
        <tr>
            <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Mario</a></p></td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:m.solomon@students.htl-leonding.ac.at" class = "styleForEmailInMain">Mario</a></p></td>
            <td></td>
            <td></td>
        </tr>
